--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="news">
     <article>
       <a href="#">
-        <h2>  Apple представила iPhone 16 с функцией ИИ-ассистент </h2>
+        <h2>  Apple представила iPhone 16 с функцией ИИ-ассистента </h2>
       </a>
       <div class="article-meta">
         Опубликовал <a class="news__author" href="#"> Алексей Морозов </a>
